Hub visibility bugfixes
And other improvements

--- a/src/app/views/hub/hub.component.scss
+++ b/src/app/views/hub/hub.component.scss
@@ -50,7 +50,7 @@ h1{
   margin:0 1em 0 0;
   line-height: 2.5em;
 }
-.public{
+.dsVisibility{
   float: right;
   line-height: 1.5em;
 }
